# Quillqay

./: .gitignore  AGENTS.md  DESIGN.md  README.md  opencode.json
.github/workflows/: ci.yml
.opencode/skills/aspnet-api/: SKILL.md
.opencode/skills/demo-data/: SKILL.md
.opencode/skills/editorjs/: SKILL.md
.opencode/skills/excalidraw/: SKILL.md
.opencode/skills/liquid-glass/: SKILL.md
.opencode/skills/new-section/: SKILL.md
.opencode/skills/tanstack-query/: SKILL.md
.opencode/skills/xyflow-react/: SKILL.md
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile
backend/migrations/: 20240128000000_init_schema.sql  20260128000001_change_block_id_to_text.sql
backend/src/: main.rs  models.rs
backend/src/domain/: entities.rs  errors.rs  repositories.rs
backend/src/infrastructure/persistence/: postgres.rs
backend/src/infrastructure/web/: handlers.rs
frontend/: components.json  next.config.mjs  package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: BlockEditor.tsx  NotesList.tsx  ViewTransitionLink.tsx
frontend/src/context/: diagram-layout-context.tsx  schema-context.tsx  storage-context.tsx
frontend/src/dialogs/: table-schema-dialog.tsx
frontend/src/hooks/: use-diagram-persistence.ts
frontend/src/lib/: api.ts  dbml-language.ts  demo-schema-data.ts  handle-constants.ts  schema-parser.ts  sql-export.ts
k8s/: backend-deployment.yaml  backend-service.yaml  cloudflared-deployment.yaml  postgres-statefulset.yaml  secrets.yaml
(+41 files in other folders)
